Remove demo name

--- a/resources/deploy/aks/deployment.yml
+++ b/resources/deploy/aks/deployment.yml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: ${appname}
-        image: ${registry}/demo/${appname}:${tag}
+        image: ${registry}/${appname}:${tag}
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
